# alibi

./: .gitattributes  .gitignore  HASHES.txt  README.md  Run scan.bat  SECURITY.md  START HERE.txt
.github/workflows/: ci.yml  pages.yml
alibi-engine/: LICENSE  README.md  SECURITY.md
alibi-engine/docs/: HANDOFF-v4.3.md  NEXT_SESSION.md  PROPOSAL-v5.md  for-reviewers.md  memory-suggested.md
alibi-engine/scanner/: alibi-safety-card.html  console-rig-audit.ps1  console-setup-checklist.html  forensic-common.ps1  forensic-scan.ps1  one-page-guide.html  (+5 more)
dev/: HANDOFF-github-ship.md  release-plan-v4.3.md
docs/: NEXT_SESSION.md  for-reviewers.md  handoff.md
kit/: README.txt  console-run-check.bat  console-setup-checklist.html  forensic-common.ps1  forensic-scan.ps1  generate-visual-companion.ps1  one-page-guide.html  run-check.bat  top-bin-explainer-offline.html  top-bin-explainer.html
python/: .gitignore  README.md  pyproject.toml
python/docs/: design-handoff.md
python/examples/: console-rig-capture-stack.txt  console-rig-capture-stack_visual.html  generate_example.py  pc-mode-cheats-detected.txt  pc-mode-cheats-detected_visual.html  pc-mode-clean.txt  pc-mode-clean_visual.html  pc-mode-input-devices-detected.txt  pc-mode-input-devices-detected_visual.html
python/scripts/: run-scan.bat
python/src/alibi/: __init__.py  console_rig_audit.py  findings.py  forensic_scan.py  scanners.py  utils.py  visual_companion.py  visual_scripts.js  visual_styles.css
python/src/pc_check/: __init__.py  __main__.py  console_rig_audit.py  forensic_scan.py  keywords.py  loldrivers.py  recency.py  reports.py  scanners.py  snapshots.py  utils.py  visual_companion.py  visual_scripts.js
python/tests/: conftest.py  test_smoke.py
ready-to-flash/: Run scan.bat  START HERE.txt
scanner/: alibi-safety-card.html  console-lockdown-explained.html  console-rig-audit.ps1  forensic-common.ps1  forensic-scan.ps1  generate-visual-companion-console.ps1  generate-visual-companion.ps1  one-page-guide.html  run-check.bat  visual-companion-common.ps1
scripts/: build-release.ps1  rewrite_kit_to_scanner.py
(+40 files in other folders)
